dc/s2n-quic-dc/src/snapshots/stream__reader__tests__basic_read.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.release.bytes=11
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(11) consumed_len=11
0:00:00.000000000 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(11) consumed_len=11 total_received_len=11 is_writing_complete=true is_reading_complete=true
0:00:00.000000000 [main] TRACE c#credit.release.bytes=1048565
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
