dc/s2n-quic-dc/src/snapshots/stream__reader__tests__blocked_signal_doubles_growth_ratio_and_dedups.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0:00:00.000000000 [main] TRACE c#credit.release.bytes=1048576
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] TRACE c#credit.release.bytes=64
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] TRACE c#credit.acquire.fast_path=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=1048640
0:00:01.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=64 total_received_len=64 is_writing_complete=false is_reading_complete=false
0:00:01.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0:00:01.000000000 [main] TRACE c#credit.release.bytes=2097152
0:00:01.000000000 [main] TRACE c#credit.release.calls=1
