dc/s2n-quic-dc/src/snapshots/stream__reader__tests__bounded_hint_does_not_over_advertise.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.release.bytes=524289
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:01.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=524289 total_received_len=524289 is_writing_complete=false is_reading_complete=false
0:00:01.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0:00:01.000000000 [main] TRACE c#credit.release.bytes=524287
0:00:01.000000000 [main] TRACE c#credit.release.calls=1
