dc/s2n-quic-dc/src/snapshots/stream__reader__tests__flow_control_violation_emits_single_reset_frame.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Peer exceeded advertised receive window stream_id=1 offset=0 payload_len=1048577 payload_end_offset=1048577 remote_max_data=1048576
0:00:00.000000000 [main] DEBUG event=on_reset prev=Open next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs:796:21
0:00:00.000000000 [main] DEBUG Sent FlowReset stream_id=1 error_code=9 reset_target=Both
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
